# TeleBotCore

./: .dockerignore  .env_sample  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
core/: __init__.py  bot.py  version.py
core/auth/: __init__.py  auth.py
core/bot/: __init__.py  auth.py  bot.py  logging.py
core/config/: base_config.py  manager.py
core/display/: __init__.py  html_builder.py  image_manager.py
core/filters/: __init__.py  base.py  rbac.py
core/fsm/: __init__.py  filter_configurator.py  registry.py
core/handlers/: __init__.py  callbacks.py  errors.py  fallback.py  start.py
core/keyboards/: __init__.py  keyboard_builder_base.py  main_menu_keyboard.py
core/logging/: __init__.py  logging.py
core/middlewares/: __init__.py  plugin_logger.py  user_init.py
core/plugins/: __init__.py  base.py  global_registry.py  manager.py  registry.py
core/rbac/: __init__.py  manager.py  models.py  permissions.py
core/stats/: __init__.py  manager.py  plugins.py  system.py
databases/: __init__.py  database_manager.py  exceptions.py  user_manager.py
modules/databases/: models.py  rbac_models.py  user_manager.py
plugins/: __init__.py
