[project]
name = "telebotcore"
version = "1.0.0"
description = "Modular Telegram Bot Template"
authors = [
    {name = "Agamov Gamid", email = "gamaefremov@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["telegram", "bot", "template", "modular", "plugins"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Frameworks",
    "Operating System :: OS Independent",
]

dependencies = [
    "aiogram>=3.22.0",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.44"
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.30.0",
]
sqlite = [
    "aiosqlite>=0.21.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/gambojo/telebotcore"
Documentation = "https://github.com/gambojo/telebotcore#readme"
Repository = "https://github.com/gambojo/telebotcore"
"Issue Tracker" = "https://github.com/gambojo/telebotcore/issues"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "databases*", "plugins*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
